<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_87"
    android:orientation="horizontal">


    <RelativeLayout
        android:id="@+id/rl_follow"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_65"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center">


        <TextView
            android:id="@+id/tv_follow_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/follow_num"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20" />

        <TextView
            android:id="@+id/tv_my_follow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_follow_num"
            android:gravity="center"
            android:text="@string/my_follow"
            android:textSize="@dimen/sp_13" />
    </RelativeLayout>

    <View
        android:layout_width="@dimen/dp_1"
        android:layout_height="@dimen/dp_25"
        android:layout_gravity="center"
        android:background="@color/light_grey"
        android:gravity="center" />

    <RelativeLayout
        android:id="@+id/rl_fans"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_65"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center">


        <TextView
            android:id="@+id/tv_fans_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fans_num"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20" />

        <TextView
            android:id="@+id/tv_my_fans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_fans_num"
            android:gravity="center"
            android:text="@string/my_fans"
            android:textSize="@dimen/sp_13" />
    </RelativeLayout>

</LinearLayout>

